
name: antiblog
version: 0.1.0.1
-- synopsis:            
-- description:         
homepage: http://github.com/geekyfox/antiblog
license: MIT
license-file: LICENSE
author: Ivan Appel
maintainer: ivan.appel@gmail.com
-- copyright:           
category: Web
build-type: Simple
cabal-version: >=1.8

data-files:
    static/antiblog.css

executable antiblog
  main-is: Antiblog/Main.hs
  hs-source-dirs: src
  other-modules:
    Antiblog.Layout
    ,Common.Api
    ,Common.Config
    ,Common.Database
    ,Common.Model
    ,Common.Schema
    ,Utils.Concierge
    ,Utils.Data.Tagged
  ghc-options:
      -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
      -fno-warn-name-shadowing
      -fno-warn-missing-signatures

  if impl(ghc < 7.6)
    build-depends:
        -- wai-extra 3.0.15 doesn't build on GHC 7.4
        wai-extra < 3.0.15
        ,warp < 3.1.0

  build-depends:
    base >=4.5 && <5.0
    ,skulk >=0.1 && <0.2
    ,aeson >=0.11.0.0 && <0.12
    ,blaze-html >=0.8.0.2 && <0.9
    ,bytestring >=0.10.6.0 && <0.11
    ,containers >=0.4.2 && <0.6
    ,directory >=1.2.2.1  && <1.3
    ,filepath >=1.4.0.0 && <1.5
    ,http-types >=0.8.6 && <0.10
    ,ini >= 0.3.4 && < 0.4
    ,network-uri >=2.6.0.0 && <2.7
    ,postgresql-simple >=0.5 && <0.6
    ,random >= 1.1 && <1.2
    ,resource-pool >=0.2.3.2 && <0.3
    ,rss >=3000.2.0.4 && <3000.3    
    ,scotty >=0.11.0 && <0.12
    ,split >=0.2.2 && <0.3    
    ,text >=1.2.0.4 && <1.3
    ,time >=1.4  && <1.7
    ,transformers >= 0.5.2.0 && <0.6
    ,unordered-containers >= 0.2.7.0 && < 0.3


executable antiwork
  main-is: Antiwork/Main.hs
  hs-source-dirs: src
  ghc-options:
      -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
      -fno-warn-name-shadowing
      -fno-warn-missing-signatures
  build-depends:
    base >=4.5 && < 5.0
    ,skulk >= 0.1 && < 0.2
    ,aeson >= 0.11.0.0 && <0.12
    ,bytestring >=0.10.6.0 && <0.11    
    ,containers >= 0.4.2 && < 0.6
    ,directory >=1.2.2.1  && <1.3
    ,filepath >=1.4.0.0 && <1.5
    ,ini >= 0.3.4 && < 0.4
    ,postgresql-simple >=0.5 && <0.6
    ,random >= 1.1 && <1.2
    ,resource-pool >=0.2.3.2 && <0.3
    ,split >=0.2.2 && <0.3        
    ,text >=1.2.0.4 && <1.3
    ,time >=1.4  && <1.7
    ,unordered-containers >= 0.2.7.0 && < 0.3
    

executable antisync
    main-is: Antisync/Main.hs
    hs-source-dirs: src
    other-modules:
        Antisync.ApiClient
        ,Antisync.CmdLine
        ,Antisync.Config
        ,Antisync.Parser
    ghc-options:
        -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
        -fno-warn-name-shadowing
        -fno-warn-missing-signatures
    build-depends:
        base >=4.5 && < 5.0
        ,skulk >=0.1 && <0.2
        ,aeson >=0.11.0.0 && <0.12
        ,bytestring >=0.10.6.0 && <0.11
        ,case-insensitive >=1.2.0.4  && <1.3
        ,cmdargs >=0.10.12 && <0.11
        ,containers >=0.4.2 && <0.6
        ,directory >=1.2.2.1  && <1.3
        ,filepath >=1.4.0.0 && <1.5
        ,http-client >=0.4.11.2 && <0.5
        ,http-types >=0.8.6 && <0.10
        ,ini >= 0.3.4 && < 0.4
        ,MissingH >=1.3.0.1 && <1.4
        ,split >=0.2.2 && <0.3
        ,strict >=0.3.2 && <0.4
        ,text >=1.2.0.4 && <1.3
        ,time >=1.4 && <1.7
        ,unix >=2.7.1.0 && <2.8
        ,unordered-containers >= 0.2.7.0 && < 0.3
