
name: antiblog
version: 0.1.0.1
synopsis: Antiblog website engine
description: Antiblog website engine
homepage: http://github.com/geekyfox/antiblog
license: MIT
license-file: LICENSE
author: Ivan Appel
maintainer: ivan.appel@gmail.com
copyright: (C) Ivan Appel 2014-2016
category: Web
build-type: Simple
cabal-version: >=1.10

data-files:
    static/antiblog.css

source-repository head
    type: git
    location: https://github.com/geekyfox/antiblog.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall 
        -fno-warn-unused-do-bind
        -fno-warn-orphans
        -fno-warn-name-shadowing
        -fno-warn-missing-signatures
    exposed-modules:
        Antiblog.Api
        ,Antiblog.Config
        ,Antiblog.Layout
        ,Antiblog.Routing
        ,Antiblog.Syncer
        ,Antisync.Parser
        ,Common.Database
        ,Common.Model
    other-modules:
        Paths_antiblog
        ,Common.Schema
        ,Utils.Concierge        
        
    if impl(ghc < 7.6)
        build-depends:
            wai-extra == 3.0.14.3
            ,warp == 3.0.13.1
            ,postgresql-simple == 0.5.1.2
            
    if impl(ghc < 7.10)
        build-depends:
            ini == 0.3.3

    if impl(ghc > 8.0)
        build-depends:
            directory == 1.2.6.2

    build-depends:
        base >=4.5 && <4.10
        ,skulk >=0.1.2 && <0.2
        ,aeson >=0.11.0.0 && <0.12
        ,blaze-html >=0.8.0.2 && <0.9
        ,bytestring >=0.10.6.0 && <0.11
        ,case-insensitive >=1.2.0.4  && <1.3
        ,cmdargs >=0.10.12 && <0.11        
        ,containers >= 0.4.2 && < 0.6
        ,directory >=1.2.2.1  && <1.3
        ,feed >= 0.3.11.1 && < 0.4
        ,filepath >=1.4.0.0 && <1.5
        ,http-client >=0.4.11.2 && <0.5
        ,http-types >=0.8.6 && <0.10
        ,ini >= 0.3.3 && < 0.4
        ,network-uri >=2.6.0.0 && <2.7
        ,postgresql-simple >=0.5 && <0.6
        ,pureMD5 >= 2.1.2.1 && < 2.1.3
        ,random >= 1.1 && <1.2
        ,resource-pool >=0.2.3.2 && <0.3
        ,scotty >=0.11.0 && <0.12
        ,strict >=0.3.2 && <0.4
        ,text >=1.2.0.4 && <1.3
        ,time >=1.4  && <1.7
        ,transformers >= 0.5.2.0 && <0.6
        ,unix >=2.7.1.0 && <2.8
        ,unordered-containers >= 0.2.7.0 && < 0.3
        ,xml >= 1.3.14 && < 1.4

executable antiblog
  main-is: src/Antiblog.hs
  build-depends: base, antiblog, scotty
  default-language: Haskell2010

executable antiwork
    main-is: src/Antiwork.hs
    build-depends: base, antiblog, cmdargs
    default-language: Haskell2010
    
executable antisync
    main-is: src/Antisync.hs
    build-depends: base, antiblog, cmdargs
    default-language: Haskell2010
