
name:                antiwork
version:             0.1.0.1
-- synopsis:            
-- description:         
homepage:            http://antiblog.geekyfox.net
license:             MIT
license-file:        ../LICENSE
author:              Ivan Appel
maintainer:          ivan.appel@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable antiwork
  main-is:             Antiwork/Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
                       -fno-warn-name-shadowing
                       -fno-warn-missing-signatures
  -- other-modules:       
  build-depends:       base             ==4.6.*
                      ,anticore         ==0.1.0.1
                      ,antihost         ==0.1.0.1
                      --,aeson
                      --,bytestring       >=0.10.6.0 && <0.11
                      --,case-insensitive >=1.2.0.4  && <1.3
                      --,cmdargs          >=0.10.12  && <0.11
                      --,containers
                      --,directory        >=1.2.2.1  && <1.3
                      --,http-client      >=0.4.11.2 && <0.5
                      --,http-types       >=0.8.6    && <0.9
                      --,MissingH         >=1.3.0.1  && <1.4
                      --,strict           >=0.3.2    && <0.4
                      --,text             >=1.2.0.4  && <1.3
                      --,unix             >=2.7.1.0  && <2.8
                      --,utf8-string      >=0.3.8    && <0.4
--                       filepath         >=1.4.0.0  && <1.5,
--                       network          >=2.6.0.0  && <2.7,
--                       network-uri      >=2.6.0.0  && <2.7,
--                       split            >=0.2.2    && <0.3,
--              -- Not cutting edge
--                       time             >=1.4  && <1.6

